Fixed scrollbar on Windows (Microsoft Edge)

--- a/src/interface/search.scss
+++ b/src/interface/search.scss
@@ -82,13 +82,13 @@ $search-width: 400px;
 
     // Scroll Behavior
     overflow-x: hidden;
-    overflow-y: auto;
-    scrollbar-width: thin;
+    overflow-y: hidden;
     padding-right: 6px;
 
     &:hover {
         padding-right: 0px;
         overflow-y: overlay;
+        scrollbar-width: $scrollbar-width;
 
         &::-webkit-scrollbar {
             height: $scrollbar-width;
